--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </div>
            </div>
            <div class="item">
-              <img src="/assets/design-banner1.jpg" alt="">
+              <img src="/img/design-banner1.jpg" alt="">
               <div class="line">
                  <div class="text hide-s">
                     <div class="line">
