--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
 
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+
   <!-- require js -->
   <script src="js/jquery-1.8.3.min.js"></script>
   <script src="js/jquery-ui.min.js"></script>
@@ -364,11 +383,11 @@
               </div>
               <div class="s-12 m-12 l-5">
                 <h3>Contact Us</h3>
-                <form class="customform" action="">
-                  <div class="s-12"><input name="" placeholder="Your e-mail" title="Your e-mail" type="text" /></div>
-                  <div class="s-12"><input name="" placeholder="Your name" title="Your name" type="text" /></div>
+                <form class="customform" action="//formspree.io/amazingrails@gmail.com" method="POST">
+                  <div class="s-12"><input name="name" placeholder="Your name" title="Your name" type="text" /></div>
+                  <div class="s-12"><input name="_replyto" placeholder="Your e-mail" title="Your e-mail" type="email" /></div>
                   <div class="s-12"><textarea placeholder="Your message" name="" rows="5"></textarea></div>
-                  <div class="s-12 m-12 l-4"><button class="color-btn" type="submit">Click To Submit</button></div>
+                  <div class="s-12 m-12 l-4"><button class="color-btn" type="submit">Send</button></div>
                 </form>
               </div>
            </div>
