fixed broken assets path

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
   <script src="js/jquery-ui.min.js"></script>
   <script src="js/modernizr.js"></script>
   <script src="js/responsee.js"></script>
-  <script src="js/owl-carousel/owl.carousel.min.js"></script>
   <script src="js/template-scripts.js"></script>
 
   <script src="https://maps.googleapis.com/maps/api/js"></script>
@@ -147,7 +146,7 @@
               </div>
            </div>
            <!-- <div class="item">
-              <img src="/assets/img/third.jpg" alt="">
+              <img src="img/third.jpg" alt="">
               <div class="line">
                  <div class="text hide-s">
                     <div class="line">
@@ -208,7 +207,7 @@
      <!-- ABOUT US -->
      <div id="about-us">
         <div class="s-12 m-12 l-6 media-container">
-           <img src="/assets/features.png" alt="">
+           <img src="img/features.png" alt="">
         </div>
         <article class="s-12 m-12 l-6">
            <h2>We are WEB & IT master</h2>
@@ -229,10 +228,10 @@
                 <a class="tab-label active-btn">Web Design</a>
                 <div class="tab-content">
                   <div class="margin">
-                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="/assets/img/por1.jpg" alt=""></a></div>
-                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="/assets/img/por4.jpg" alt=""></a></div>
-                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="/assets/img/por6.jpg" alt=""></a></div>
-                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="/assets/img/por3.jpg" alt=""></a></div>
+                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="img/por1.jpg" alt=""></a></div>
+                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="img/por4.jpg" alt=""></a></div>
+                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="img/por6.jpg" alt=""></a></div>
+                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="img/por3.jpg" alt=""></a></div>
                   </div>
                 </div>
               </div>
@@ -240,10 +239,10 @@
                 <a class="tab-label">Development</a>
                 <div class="tab-content">
                   <div class="margin">
-                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="/assets/img/por7.jpg" alt=""></a></div>
-                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="/assets/img/por5.jpg" alt=""></a></div>
-                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="/assets/img/por1.jpg" alt=""></a></div>
-                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="/assets/img/por2.jpg" alt=""></a></div>
+                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="img/por7.jpg" alt=""></a></div>
+                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="img/por5.jpg" alt=""></a></div>
+                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="img/por1.jpg" alt=""></a></div>
+                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="img/por2.jpg" alt=""></a></div>
                   </div>
                 </div>
               </div>
@@ -251,10 +250,10 @@
                 <a class="tab-label">Social Campaigns</a>
                 <div class="tab-content">
                   <div class="margin">
-                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="/assets/img/por4.jpg" alt=""></a></div>
-                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="/assets/img/por6.jpg" alt=""></a></div>
-                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="/assets/img/por3.jpg" alt=""></a></div>
-                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="/assets/img/por5.jpg" alt=""></a></div>
+                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="img/por4.jpg" alt=""></a></div>
+                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="img/por6.jpg" alt=""></a></div>
+                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="img/por3.jpg" alt=""></a></div>
+                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="img/por5.jpg" alt=""></a></div>
                   </div>
                 </div>
               </div>
@@ -262,10 +261,10 @@
                 <a class="tab-label">Photography</a>
                 <div class="tab-content">
                   <div class="margin">
-                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="/assets/img/por7.jpg" alt=""></a></div>
-                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="/assets/img/por2.jpg" alt=""></a></div>
-                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="/assets/img/por5.jpg" alt=""></a></div>
-                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="/assets/img/por6.jpg" alt=""></a></div>
+                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="img/por7.jpg" alt=""></a></div>
+                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="img/por2.jpg" alt=""></a></div>
+                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="img/por5.jpg" alt=""></a></div>
+                    <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Lorem Ipsum Dolor</h4><p>Laoreet dolore magna aliquam erat volutpat.</p></div><img src="img/por6.jpg" alt=""></a></div>
                   </div>
                 </div>
               </div>
@@ -367,7 +366,7 @@
            <h2 class="section-title">Contact Us</h2>
            <div class="margin">
               <div class="s-12 m-12 l-3 hide-m hide-s margin-bottom right-align">
-                <img src="/assets/img/contact.jpg" alt="">
+                <img src="img/contact.jpg" alt="">
               </div>
               <div class="s-12 m-12 l-4 margin-bottom right-align">
                  <h3>Asimi Soft Pvt Ltd - Complete Design, Website, Desktop-Software and many more e-solutions.</h3>
@@ -411,7 +410,8 @@
         </div>
      </div>
   </footer>
-  <script type="text/javascript" src="/assets/owl-carousel/owl.carousel.js"></script>
+
+  <script src="js/owl-carousel/owl.carousel.min.js"></script>
   <script type="text/javascript">
      jQuery(document).ready(function($) {
         var theme_slider = $("#owl-demo");
