--- a/index.html
+++ b/index.html
@@ -386,7 +386,9 @@
                   <div class="s-12"><input name="name" placeholder="Your name" title="Your name" type="text" /></div>
                   <div class="s-12"><input name="_replyto" placeholder="Your e-mail" title="Your e-mail" type="email" /></div>
                   <div class="s-12"><textarea placeholder="Your message" name="" rows="5"></textarea></div>
-                  <div class="s-12 m-12 l-4"><button class="color-btn" type="submit">Send</button></div>
+                  <div class="s-12 m-12 l-4">
+                    <input type="submit" onclick="alert('comming soon');" value='send'"/>
+                  </div>
                 </form>
               </div>
            </div>
@@ -402,11 +404,11 @@
   <footer>
      <div class="line">
         <div class="s-12 l-6">
-           <p>Copyright © 2015, Asimi Soft Pvt Ltd</p>
+           <p>Copyright &copy; 2015, Asimi Soft Pvt Ltd</p>
         </div>
         <div class="s-12 l-6">
            <p class="right">Give us chance to work, we will provide you better solution more than your expectaction.</p>
-           <p class="left">Complete Responsive Design, Desktop, Website, Web apps, Mobile apps, Logo & Graphic Designs, and many more e-solutions.</p>
+           <p class="left">Responsive Design, Desktop, Website, Web apps, Mobile apps, Logo & Graphic Designs, and many more e-solutions.</p>
         </div>
      </div>
   </footer>
