--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                    <li class="active-item"><a href="#carousel">Home</a></li>
                    <li><a href="#features">What we do?</a></li>
                    <li><a href="#about-us">About Us</a></li>
-                   <li><a href="#our-work">Portfolio</a></li>
+                   <!-- <li><a href="#our-work">Portfolio</a></li> -->
                    <li><a href="#services">Services</a></li>
                    <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -221,7 +221,7 @@
           </article>
        </div>
        <!-- OUR WORK -->
-       <div id="our-work">
+       <!-- <div id="our-work">
           <div class="line">
              <h2 class="section-title">Our Work</h2>
              <div class="tabs">
@@ -271,7 +271,7 @@
                 </div>
              </div>
           </div>
-       </div>
+       </div> -->
        <!-- SERVICES -->
        <div id="services">
           <div class="line">
@@ -281,21 +281,21 @@
                    <i class="icon-vector"></i>
                    <div class="service-text">
                       <h3>Responsive Web Design and Development</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                      <p>We believe design and development should go hand in hand. Not only can our software engineers recommend the right platform for your needs, but our designers work closely with you to understand your idea before turning it into a beautiful UI design with real HTML. We're experts in a number of web frameworks, including ASP.NET, ASP.NET MVC and Ruby on Rails.</p>
                    </div>
                 </div>
                 <div class="s-12 m-12 l-4 margin-bottom">
                    <i class="icon-random"></i>
                    <div class="service-text">
                       <h3>Software Development</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                      <p>Web-based applications may be popular, but we haven't forgotten those all-important Windows applications! We use WPF and WinForm to deliver solid desktop software.</p>
                    </div>
                 </div>
                 <div class="s-12 m-6 l-4 margin-bottom">
                    <i class="icon-eye"></i>
                    <div class="service-text">
                       <h3>Mobile Application Development</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                      <p>Take a look at our products page to see our range of expertise across iOS and Android platforms. Why not ask us how we can turn your great idea into a beautiful application?</p>
                    </div>
                 </div>
              </div>
@@ -307,28 +307,28 @@
                    <i class="icon-vector"></i>
                    <div class="service-text">
                       <h3>IT Support & Maintenance</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                      <p>We are here to help you 24/7.</p>
                    </div>
                 </div>
                 <div class="s-12 m-6 l-4 margin-bottom">
                    <i class="icon-eye"></i>
                    <div class="service-text">
                       <h3>Cloud Services</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                      <p>Cloud computing offers great elasticity, scalability and cost savings for growing businesses. We're experienced in Amazon Web Services (AWS), EC2, S3, RDS, Hadoop, MapReduce, YARN, and more. We can provide end-to-end solutions from development to production release.</p>
                    </div>
                 </div>
                 <div class="s-12 m-12 l-4 margin-bottom">
                    <i class="icon-random"></i>
                    <div class="service-text">
                       <h3>Web Hosting, Deployment & Domain Registration</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                      <p>We have varieties of packages for your your best suite.</p>
                    </div>
                 </div>
              </div>
           </div>
        </div>
        <!-- LATEST NEWS -->
-       <div id="latest-news">
+       <!-- <div id="latest-news">
           <div class="line">
             <h2 class="section-title">Latest News</h2>
             <div class="margin">
@@ -360,7 +360,7 @@
               </div>
             </div>
           </div>
-       </div>
+       </div> -->
        <!-- CONTACT -->
        <div id="contact">
           <div class="line">
