social linked url modified

--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
                    </address>
                    <br />
                    <h3>Social</h3>
-                   <p><i class="icon-facebook icon"></i> <a href="https://www.facebook.com/pages/Vision-Design-graphic-ZOO/154664684553091">Asimi Soft Facebook</a></p>
-                   <p class="margin-bottom"><i class="icon-twitter icon"></i> <a href="https://twitter.com/MyResponsee">Asimi Soft Twitter</a></p>
+                   <p><i class="icon-facebook icon"></i> <a href="#">Asimi Soft Facebook</a></p>
+                   <p class="margin-bottom"><i class="icon-twitter icon"></i> <a href="#">Asimi Soft Twitter</a></p>
                 </div>
                 <div class="s-12 m-12 l-5">
                   <h3>Contact Us</h3>
