--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+       google_ad_client: "ca-pub-6361630351328078",
+       enable_page_level_ads: true
+      });
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
     <title>Asimi-Soft</title>
@@ -58,7 +65,6 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
       <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
     <![endif]-->
-
   </head>
   <body class="size-1140">
 
