updated latest location

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <script>
       function initialize(){
         var mapCanvas = document.getElementById('map-block');
-        var myLatLng  = {lat: 28.7121876999, lng: 80.57301};
+        var myLatLng  = {lat: 28.706142956294865, lng: 80.56830962467575};
         var map = new google.maps.Map(mapCanvas, {
           center: myLatLng,
           zoom: 15,
