--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
     <footer>
        <div class="line">
           <div class="s-12 l-6">
-             <p>Copyright &copy; 2015, Asimi Soft Pvt Ltd. <!-- hitwebcounter Code START -->
+            <p>Copyright &copy; 2015, Asimi Soft Pvt Ltd.</p> <div><!-- hitwebcounter Code START -->
               <a href="http://www.hitwebcounter.com" target="_blank">
               <img src="http://hitwebcounter.com/counter/counter.php?page=6712201&style=0001&nbdigits=5&type=page&initCount=100" title="url and counting visits" Alt="url and counting visits"   border="0" >
               </a>                                        <br/>
@@ -419,7 +419,7 @@
                                         target="_blank" style="font-family: Arial, Helvetica, sans-serif; 
                                         font-size: 9px; color: #6D5B77; text-decoration: underline ;"><em>Accurate Visits                                        </em>
                                         </a>   
-             </p>
+             </div>
           </div>
           <div class="s-12 l-6">
              <p class="right">Give us chance to work, we will provide you better solution more than your expectaction.</p>
