--- a/index.html
+++ b/index.html
@@ -411,7 +411,13 @@
     <footer>
        <div class="line">
           <div class="s-12 l-6">
-            <p>Copyright &copy; 2015, Asimi Soft Pvt Ltd.</p> <div><!-- hitwebcounter Code START -->
+            <p>Copyright &copy; 2015, Asimi Soft Pvt Ltd.</p>
+          </div>
+          <div class="s-12 l-6">
+             <p class="right">Give us chance to work, we will provide you better solution more than your expectaction.</p>
+             <p class="left">Responsive Design, Desktop, Website, Web apps, Mobile apps, Logo & Graphic Designs, and many more e-solutions.</p>
+          </div>
+         <div style="display: none;"><!-- hitwebcounter Code START -->
               <a href="http://www.hitwebcounter.com" target="_blank">
               <img src="http://hitwebcounter.com/counter/counter.php?page=6712201&style=0001&nbdigits=5&type=page&initCount=100" title="url and counting visits" Alt="url and counting visits"   border="0" >
               </a>                                        <br/>
@@ -420,11 +426,6 @@
                                         font-size: 9px; color: #6D5B77; text-decoration: underline ;"><em>Accurate Visits                                        </em>
                                         </a>   
              </div>
-          </div>
-          <div class="s-12 l-6">
-             <p class="right">Give us chance to work, we will provide you better solution more than your expectaction.</p>
-             <p class="left">Responsive Design, Desktop, Website, Web apps, Mobile apps, Logo & Graphic Designs, and many more e-solutions.</p>
-          </div>
        </div>
     </footer>
 
