--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
        <div id="topbar">
           <div class="line">
              <div class="s-12 m-6 l-6">
-                <p>CONTACT US: <strong>+977 - 9868872060</strong></p>
+                <p>CONTACT US: <strong>+977 - 9868872060, 9848430021</strong></p>
              </div>
              <div class="s-12 m-6 l-6">
                 <div class="social right">
@@ -374,7 +374,7 @@
                       <p><strong>Adress:</strong> Dhangadhi, Kailali, FWDR.</p>
                       <p><strong>Country:</strong> Nepal - Asia</p>
                       <p><strong>E-mail:</strong> amazingrails@gmail.com</p>
-                      <p><strong>Quick Contact:</strong> +977 9868872060</p>
+                      <p><strong>Quick Contact:</strong> +977 9868872060, 9848430021</p>
                    </address>
                    <br />
                    <h3>Social</h3>
