--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <title>Asimi-Soft</title>
+    
+    <meta name = "keywords" content = "AsimiSoft, Software Company, Software Development, Programing, Website, Moble App, Mobile, Mobile application, Farwestern, Farwest, Dhangadhi, Kailali, Seti, Nepal" />
+    <meta name = "description" content = "We are experienced and expert team of IT professional working on software development, website development, mobile app development, IT solution located at Farwest, Dhangadhi, Kailali, Nepali. Give us a call or visit our office location, we will never make you dissatisfy, thank you!!" />
+    <meta http-equiv = "refresh" content = "30; url = http://www.asimisoft.com" />
+    
+    <title>AsimiSoft, Sofware Company, Kailali, Dhangadhi, Farwest, Nepal</title>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
