--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
     
-    <meta name = "keywords" content = "AsimiSoft, Software Company, Software Development, Programing, Website, Moble App, Mobile, Mobile application, Farwestern, Farwest, Dhangadhi, Kailali, Seti, Nepal" />
+    <meta name = "keywords" content = "Asimi Soft, Software Company, Software Development, Programing, Website, Moble App, Mobile, Mobile application, Farwestern, Farwest, Dhangadhi, Kailali, Seti, Nepal" />
     <meta name = "description" content = "We are experienced and expert team of IT professional working on software development, website development, mobile app development, Domain & Hosting solution, IT solution located at Farwest, Dhangadhi, Kailali, Nepali. Give us a call or visit our office location, we will never make you dissatisfy, thank you!!" />
     <meta http-equiv = "refresh" content = "30; url = http://www.asimisoft.com" />
     
@@ -53,7 +53,7 @@
         var marker = new google.maps.Marker({
           position: myLatLng,
           map: map,
-          title: 'Asimi-soft Pvt. Ltd.'
+          title: 'Asimi Soft Pvt. Ltd.'
         });
       }
       google.maps.event.addDomListener(window, 'load', initialize);
@@ -124,10 +124,13 @@
                       <p>We provide easy to maintain, high quality codes using trending tools available in the market. <br><br>
                       <strong>Features:</strong> <br>
                         - Web apps<br>
+                        - Software Development><br>
                         - Mobile apps<br>
                         - e-commerce<br>
                         - SocialNetwork Marketplace<br>
                         - Outsourcing Services<br>
+                        - Domain Registration<br>
+                        - Web Hosting<br>
                         - AND LOT MORE....
                       <p>
                    </div>
