--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
     
-    <meta name = "keywords" content = "Asimi Soft, Software Company, Software Development, Programing, Website, Moble App, Mobile, Mobile application, Farwestern, Farwest, Dhangadhi, Kailali, Seti, Nepal" />
+    <meta name = "keywords" content = "Asimi Soft, AsimiSoft, Software Company, Software Development, Programing, Website, Moble App, Mobile, Mobile application, Farwestern, Farwest, Dhangadhi, Kailali, Seti, Nepal" />
     <meta name = "description" content = "We are experienced and expert team of IT professional working on software development, website development, mobile app development, Domain & Hosting solution, IT solution located at Farwest, Dhangadhi, Kailali, Nepali. Give us a call or visit our office location, we will never make you dissatisfy, thank you!!" />
     <meta http-equiv = "refresh" content = "30; url = http://www.asimisoft.com" />
     
@@ -99,6 +99,9 @@
                    <!-- <li><a href="#our-work">Portfolio</a></li> -->
                    <li><a href="#services">Services</a></li>
                    <li><a href="#contact">Contact</a></li>
+                   <li>
+                      <a href="/careers.html">Career</a></li>                     
+                   </li>
                 </ul>
              </div>
           </div>
