--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                    <li><a href="#services">Services</a></li>
                    <li><a href="#contact">Contact</a></li>
                    <li>
-                      <a href="/careers.html">Career</a></li>                     
+                      <a href="/careers.html">Careers</a></li>                     
                    </li>
                 </ul>
              </div>
