--- a/careers.html
+++ b/careers.html
@@ -101,7 +101,7 @@
                       <h3>Featured Jobs</h3>
                       <h3>- Application Development, Product Specialist</h3>
                       <h3>- Cloud Infrastracture & Security</h3>
-                      <h3>- Marketing Analysis</h3>
+                      <h3>- Sales & Marketing</h3>
                       <h3>- Digital Experience</h3>
                    </div>
 
