--- a/careers.html
+++ b/careers.html
@@ -109,7 +109,7 @@
                    
                     <div class="service-text">
                        <h3>For more information about current postions stay with us.</h3>
-                       <h3>Drop your resume at info@asimisoft.com and cc to amazingrails@gmail.com</h3>
+                       <h3>Drop your resume at info@asimisoft.com</h3>
                     </div>
 
                     <br/>
@@ -129,7 +129,7 @@
                       <li>No of Vaccancy/s: [1]</li>
                       <li>Employment Type: Full Time</li>
                       <li>Offered Salary: Negotiable</li>
-                      <li>Apply Before: 10 Sep, 2017</li>
+                      <!-- <li>Apply Before: 10 Sep, 2017</li> -->
                       <li>Education Level: Bachelor</li>
                       <li>Experience Required: At least 1 years</li>
                     </ul>
@@ -154,9 +154,9 @@
 
                       <ul>
                         <h4>Note:</h4>
-                        <li>Drop your resume at info@asimisoft.com and cc to amazingrails@gmail.com</li>
+                        <li>Drop your resume at info@asimisoft.com</li>
                         <li>No telephonic enquiry please.</li>
-                        <li>Shortlisted candidate will be called for an interview.</li>
+                        <li>Shortlisted candidate will be emailed for an interview.</li>
                       </ul>
                       <br>
                     </div>
