--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                    <address>
                       <p><strong>Adress:</strong> Dhangadhi, Kailali, FWDR.</p>
                       <p><strong>Country:</strong> Nepal - Asia</p>
-                      <p><strong>E-mail:</strong>info@asimisoft.com, amazingrails@gmail.com</p>
+                      <p><strong>E-mail:</strong>info@asimisoft.com</p>
                       <p><strong>Quick Contact:</strong> +977 9868872060, 9848430021</p>
                    </address>
                    <br />
