--- a/careers.html
+++ b/careers.html
@@ -154,9 +154,8 @@
 
                       <ul>
                         <h4>Note:</h4>
-                        <li>Drop your resume at info@asimisoft.com</li>
-                        <li>No telephonic enquiry please.</li>
-                        <li>Shortlisted candidate will be emailed for an interview.</li>
+                        <li>Drop your resume at info@asimisoft.com. Shortlisted candidate will be emailed and call for an interview.</li>
+                        <li>No telephonic enquiry please</li>
                       </ul>
                       <br>
                     </div>
