--- a/careers.html
+++ b/careers.html
@@ -117,7 +117,7 @@
                     <div class="vaccancy-text">
                       <br>
                       <ul>
-                        <h4 class="vaccancy-heading">Vaccancy Notice <small style="font-size: 12px">(24 Aug, 2017)</small></h4>
+                        <h4 class="vaccancy-heading">Vaccancy Notice <small style="font-size: 12px">(Published date 24 Aug, 2017, expired after 15 days)</small></h4>
                       </ul>
                     
                     <br>
