--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
        <div id="carousel">
           <div id="owl-demo" class="owl-carousel owl-theme">
              <div class="item">
-                <img src="img/development-banner1.jpg" alt="development banner">
+                <img src="../img/development-banner1.jpg" alt="development banner">
                 <div class="line">
                    <div class="text hide-s">
                       <div class="line">
