--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <meta name = "keywords" content = "Asimi Soft, AsimiSoft, Software Company, Software Development, Programing, Website, Moble App, Mobile, Mobile application, Farwestern, Farwest, Dhangadhi, Kailali, Seti, Nepal" />
     <meta name = "description" content = "We are experienced and expert team of IT professional working on software development, website development, mobile app development, Domain & Hosting solution, IT solution located at Farwest, Dhangadhi, Kailali, Nepali. Give us a call or visit our office location, we will never make you dissatisfy, thank you!!" />
-    <meta http-equiv = "refresh" content = "30; url = http://www.asimisoft.com" />
+    <!-- <meta http-equiv = "refresh" content = "30; url = http://www.asimisoft.com" /> -->
     
     <title>Asimi Soft, Sofware Company, Kailali, Dhangadhi, Farwest, Nepal</title>
 
@@ -87,7 +87,7 @@
           <div class="line">
              <div class="s-12 l-2">
                 <p class="logo">
-                  <img src="img/logo.jpg" style="height: 71px; width: 100px; margin-top: -14px;" alt="asimisoft logo">
+                  <img src="img/logo.png" style="height: 65px; max-width: 150%; margin-top: -14px;" alt="asimisoft logo">
                 </p>
              </div>
              <div class="top-nav s-12 l-10">
