--- a/careers.html
+++ b/careers.html
@@ -60,7 +60,7 @@
           <div class="line">
              <div class="s-12 l-2">
                 <p class="logo">
-                  <img src="img/logo.jpg" style="height: 71px; width: 100px; margin-top: -14px;" alt="asimisoft logo">
+                  <img src="img/logo.png" style="height: 65px; max-width: 150%; margin-top: -14px;" alt="asimisoft logo">
                 </p>
              </div>
              <div class="top-nav s-12 l-10">
