--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
              </div>
              <div class="s-12 m-6 l-6">
                 <div class="social right">
-                   <a><i class="icon-facebook_circle"></i></a>
-                   <a><i class="icon-twitter_circle"></i></a>
+                   <a href="/asimisoftware"><i class="icon-facebook_circle"></i></a>
+                   <a href="/asimi_soft"><i class="icon-twitter_circle"></i></a>
                    <!-- <a><i class="icon-google_plus_circle"></i></a>
                    <a><i class="icon-instagram_circle"></i></a> -->
                 </div>
@@ -294,8 +294,8 @@
                 </div>
                 <div class="s-12 m-12 l-5">
                    <h3>Social</h3>
-                   <p><i class="icon-facebook icon"></i> <a href="#">Asimi Soft Facebook</a></p>
-                   <p class="margin-bottom"><i class="icon-twitter icon"></i> <a href="#">Asimi Soft Twitter</a></p>
+                   <p><i class="icon-facebook icon"></i> <a href="/asimisoftware">Asimi Soft Facebook</a></p>
+                   <p class="margin-bottom"><i class="icon-twitter icon"></i> <a href="/asimi_soft">Asimi Soft Twitter</a></p>
                 </div>
              </div>
           </div>
