--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
              <div class="s-12 m-6 l-6">
                 <div class="social right">
                    <a href="https://www.facebook.com/asimisoftware"><i class="icon-facebook_circle"></i></a>
-                   <a href="/asimi_soft"><i class="icon-twitter_circle"></i></a>
+                   <a href="https://twitter.com/asimi_soft"><i class="icon-twitter_circle"></i></a>
                    <!-- <a><i class="icon-google_plus_circle"></i></a>
                    <a><i class="icon-instagram_circle"></i></a> -->
                 </div>
@@ -295,7 +295,7 @@
                 <div class="s-12 m-12 l-5">
                    <h3>Social</h3>
                    <p><i class="icon-facebook icon"></i> <a href="https://www.facebook.com/asimisoftware">Asimi Soft Facebook</a></p>
-                   <p class="margin-bottom"><i class="icon-twitter icon"></i> <a href="/asimi_soft">Asimi Soft Twitter</a></p>
+                   <p class="margin-bottom"><i class="icon-twitter icon"></i> <a href="https://twitter.com/asimi_soft">Asimi Soft Twitter</a></p>
                 </div>
              </div>
           </div>
