--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
        <div id="topbar">
           <div class="line">
              <div class="s-12 m-6 l-6">
-                <p>CONTACT US: <strong>+977 - 9868872060, 9848430021</strong></p>
+                <p>CONTACT US: <strong>+977 - 9868872060</strong></p>
              </div>
              <div class="s-12 m-6 l-6">
                 <div class="social right">
@@ -289,7 +289,7 @@
                       <p><strong>Adress:</strong> Dhangadhi, Kailali, FWDR.</p>
                       <p><strong>Country:</strong> Nepal - Asia</p>
                       <p><strong>E-mail:</strong> info@asimisoft.com</p>
-                      <p><strong>Quick Contact:</strong> +977 9868872060, 9848430021</p>
+                      <p><strong>Quick Contact:</strong> +977 9868872060</p>
                    </address>
                 </div>
                 <div class="s-12 m-12 l-5">
