--- a/careers.html
+++ b/careers.html
@@ -44,7 +44,7 @@
        <div id="topbar">
           <div class="line">
              <div class="s-12 m-6 l-6">
-                <p>CONTACT US: <strong>+977 - 9868872060, 9848430021</strong></p>
+                <p>CONTACT US: <strong>+977 - 9868872060</strong></p>
              </div>
              <div class="s-12 m-6 l-6">
                 <div class="social right">
